 * Campaigns:
   * Descent into Darkness:
     * Made 'Alone at Last' easier.
   * Legend of Wesmere:
     * Map updates.
     * Implemented gold carryover between the multiplayer chapters.
     * Added extra keeps to keep up with the growing number of leaders.
     * Fixed scenario 04 not being playable.
   * Liberty:
     * New (unanimated) sprites for the Rogue Mage unit line.
 * Graphics:
   * Terrain:
     * Any Castle or Keep except Dwarvish can now be combined without large gaps
       or extra walls.
     * Added variant of chasm bridge for over water.
     * New transitions from all Hills and Mountains to Water.
     * Underground and chasm friendly volcanoes.
     * A new desaturated color of shallow water (Wwg).
     * Much improved lava transitions.
     * A new desaturated ocean color (Wog).
     * New Waterfall automatically placed between chasm and water or swamp.
     * New Sand-to-Water transitions
   * Animations:
     * Standing anims: Fencer, Spearman, Dwarf Guard.
     * Idle anims: 2 for the Spearman.
   * Portraits: Drake Blademaster, Hurricane Drake, Drake Flameheart, alternate
     Swordsman.
   * Units: New base frame and animations for Mudcrawler.
 * Language and i18n:
   * Updated translations: Chinese (Traditional), Czech, Dutch, Galician,
     Indonesian, Japanese, Portuguese (Brazil), Russian, Shavian, Slovak,
     Slovenian, Vietnamese
 * User interface:
   * Fixed: Addon dialog in title screen shows last host again.
   * Fixed: Fullscreen hotkey works again in the title screen.
   * Fixed: Termination of the game when making the title screen small
     (bug #16724).
   * Fixed: A resize glitch causing resize events to be lost.
   * Changed: All buttons in the title screen now have a hotkey.
   * Changed: Refresh cache hotkey is CTRL+F5 on the Mac by default now.
   * Fixed: Don't trigger an assertion failure if no tips are defined
     (bug #16731).
   * Fixed: Enter no longer shows the credits in the title screen.