@@ -34,6 +34,7 @@ public:
 	const std::string& minimap_image_overlay() const { return minimap_image_overlay_; }
 	const std::string& editor_image() const { return editor_image_; }
 	const t_string& name() const { return name_; }
+	const t_string& editor_name() const { return editor_name_.empty() ? description() : editor_name_; }
 	const t_string& description() const { return description_.empty() ? name_ : description_; }
 	const std::string& id() const { return id_; }
 
@@ -88,6 +89,7 @@ private:
 	std::string editor_image_;
 	std::string id_;
 	t_string name_;
+	t_string editor_name_;
 	t_string description_;
 
 	//the 'number' is the number that represents this
