@@ -9,6 +9,10 @@ Version 1.9.1+svn:
      * Fixed scenario 04 not being playable.
    * Liberty:
      * New (unanimated) sprites for the Rogue Mage unit line.
+ * Editor:
+   * Verbose terrain names can be specified using terrain.editor_name to
+     be displayed in the editor as "<verbose name>/<common name> (<underlying>)"
+     (bug #16450)
  * Graphics:
    * Terrain:
      * Any Castle or Keep except Dwarvish can now be combined without large gaps
